<resources>
    <string name="app_name">Get Likes</string>

    <string name="get_started">Get started</string>
    <string name="get_free_likes">Get 100 Free Likes and access to Popular Hashtags</string>
    <string name="just_sign_in_instagram">Just Sign In with Instagram</string>

    <string name="get_likes">Get Likes</string>
    <string name="earn_coins">Earn coins</string>
    <string name="hash_tags">Hashtags</string>

    <string name="select_photo">Please select one of your posts to get likes</string>
    <string name="you_have">You only have</string>
    <string name="skip">Skip</string>
    <string name="like_coin">Like(+1 coin)</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

    <string name="message_no_task">No tasks for you</string>
    <string name="message_request_sent">Request has been sent</string>

</resources>
